--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -154,6 +154,9 @@
   <data name="pngegg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\pngegg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="refresh_348" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\refresh-348.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="springTM" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\springTM.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
